feat: openapi generation command added
